==========
04/05/2009
==========

- Bugfixes
- Implementacao de nova estrutura de exibicao do dashboard
- Inclusao de botao para maximizar ou minimizar o queue

HORAS TRABALHADAS: 8h

==========
06/05/2009
==========

- Alteração do layout para páginas internas
- Listagem de feeds, cadastro e ordenacao atualizados para o novo layout
- Inclusao de algoritmo de ordenacao p/ feeds

HORAS TRABALHADAS: 6h