@@ -890,6 +890,14 @@ class B_Log
  * @category    Blotomate
  * @package     Base Library
  * @author      Rafael Castilho <rafael@castilho.biz>
+ *
+ * Use the following convention
+ * 
+ * getBySomething       obtain a single record and returns as an object of class
+ * findBySomething      obtain zero or more records as array of objects of class
+ * partialBySomething   obtain zero or mode records as array of custom objects
+ * 
+ * insertSomething, updateSomething, foobarSomething, etc
  */
 
 abstract class B_Model
@@ -2670,6 +2678,8 @@ class B_View
         foreach($a as $k => $v)
         {
             $element = is_integer($k) ? "item" : $k;
+
+            if(is_object($v)) $v = ((array) $v);
 
             if(is_array($v))
             {
